--- a/styles/home.css
+++ b/styles/home.css
@@ -5,6 +5,7 @@
 
 body {
   background-color: rgb(250 249 249);
+  height: 1000px;
 }
 
 header {
@@ -30,4 +31,29 @@ header h1 {
 header svg {
   height: 20px;
   color: white;
+}
+
+.sec-1 {
+  position: relative;
+  display: block;
+}
+
+.sec-1-img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+
+.sec-1-msg {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  text-align: center;
+  font-size: 1.75rem;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  background-color: rgba(0, 0, 0, 0.8);
+  padding: 1rem;
 }
