--- a/styles/styles.css
+++ b/styles/styles.css
@@ -35,7 +35,7 @@ h3 {
   font-size: 25px;
 }
 
-section {
+form {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -48,7 +48,7 @@ section {
   box-shadow: 0 8px 16px rgba(211, 211, 211, 0.4);
 }
 
-section input {
+form input {
   width: 400px;
   height: 30px;
   border: solid 1px rgb(201, 201, 201);
@@ -57,7 +57,7 @@ section input {
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
 }
 
-section button {
+form button {
   height: 40px;
   width: 100px;
   font-size: 15px;
@@ -67,14 +67,14 @@ section button {
   border-radius: 5px;
 }
 
-section button:hover {
+form button:hover {
   background-color: rgb(64 57 190);
   cursor: pointer;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   transition: 0.2s ease;
 }
 
-section button:active {
+form button:active {
   background-color: rgb(161 157 218);
   transition: 0.05s;
 }
