--- a/styles/quiz1.css
+++ b/styles/quiz1.css
@@ -45,3 +45,48 @@ header h1 {
   font-size: 50px;
   color: rgb(31 41 55);
 }
+
+.sec-2 {
+  padding-left: 200px;
+  padding-top: 100px;
+}
+
+.question {
+  color: rgb(31 41 55);
+  font-family: "National Park", sans-serif;
+  font-size: 20px;
+  padding-bottom: 70px;
+}
+
+.question p {
+  font-size: 22px;
+  width: 500px;
+  margin-bottom: 20px;
+  border-radius: 5px;
+  background-color: white;
+  padding: 10px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+}
+
+button {
+  height: 60px;
+  width: 120px;
+  margin-bottom: 100px;
+  background-color: rgb(99 102 241);
+  border: none;
+  border-radius: 10px;
+  color: white;
+  font-size: 20px;
+}
+
+button:hover {
+  background-color: rgb(64 57 190);
+  cursor: pointer;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  transition: 0.2s ease;
+}
+
+button:active {
+  background-color: rgb(161 157 218);
+  transition: 0.05s;
+}
