--- a/styles/common-quiz.css
+++ b/styles/common-quiz.css
@@ -109,3 +109,15 @@ button:active {
   padding-bottom: 100px;
   padding-left: 300px;
 }
+
+.score {
+  font-size: 50px;
+  font-family: "National Park", sans-serif;
+  margin-bottom: 100px;
+  text-align: center;
+  color: rgb(99 102 241);
+  border-right: solid 3px rgb(99 102 241);
+  border-left: solid 3px rgb(99 102 241);
+  background-color: white;
+  width: 500px;
+}
