--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -31,3 +31,20 @@ header h1 {
   font-size: 40px;
   color: rgb(31 41 55);
 }
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+th,
+td {
+  border: 1px solid #ccc;
+  padding: 10px;
+  text-align: left;
+}
+
+th {
+  background-color: #f4f4f4;
+}
