--- a/styles/common-quiz.css
+++ b/styles/common-quiz.css
@@ -17,7 +17,6 @@ header {
   z-index: 10;
   display: flex;
   align-items: center;
-  gap: 20px;
   height: 60px;
   background-color: rgb(99 102 241);
   border-bottom: solid 2px white;
@@ -119,30 +118,25 @@ button:active {
   margin-bottom: 100px;
   text-align: center;
   color: rgb(99 102 241);
-  border-right: solid 3px rgb(99 102 241);
-  border-left: solid 3px rgb(99 102 241);
   background-color: white;
   width: 500px;
 }
 
 footer {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  width: 100%;
-  background-color: rgb(255, 255, 255);
-  padding: 20px;
-  text-align: center;
-  box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.1);
   display: flex;
   justify-content: space-between;
   align-items: center;
+  height: 70px;
+  box-shadow: 0 -4px 6px -1px rgba(99, 102, 241, 0.1);
+  background-color: white;
 }
 
 footer a {
-  color: rgb(99 102 241);
-  font-size: 20px;
+  padding-left: 30px;
+  color: rgb(78, 80, 186);
+  font-family: "National Park", sans-serif;
+  font-size: 18px;
+  cursor: pointer;
   text-decoration: none;
 }
 
